# EgoSmart

./: .gitignore  checklist.md  dump.rdb  encypt.py  monotest.py  pyproject.toml  requirements.txt  test.db  test.py
src/: main.py
src/agents/: agent.py  orchestrator.py  process_query.py  prompt.py  session.py  util.py
src/agents/subagents/account_linking/: account_linking_tool.py  agent.py  prompt.py  tools.py
src/agents/subagents/account_linking/tools/: fetch_user_details.py
src/agents/subagents/budgeting/: agent.py  budgeting_tool.py  prompt.py
src/agents/subagents/financial_profile/: agent.py  financial_profile_tool.py  prompt.py
src/auth/: auth.py  schema.py
src/base/: model.py  schema.py
src/model/: __init__.py  finance.py  user.py
src/routes/: finance.py  google.py  template.py  whatsapp.py  whatsapp_flow.py
src/schemas/: agent_schema.py  finance.py  financial_profile.py  request_schemas.py  schema.py
src/service/: agent.py  budget.py  finance.py  financial_profile.py  flow.py  google.py  state.py  templates.py  user.py  whatsapp.py
src/utils/: config.py  countries.py  db.py  encrypt.py  exception.py  http_client.py  log.py  redis.py  response.py
