[project]
name = "egosmart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.115.12",
    "google-adk>=1.15.1",
    "google-api-python-client>=2.184.0",
    "google-auth>=2.41.1",
    "google-auth-oauthlib>=1.2.2",
    "google-generativeai>=0.8.5",
    "litellm>=1.77.7",
    "phonenumbers>=9.0.16",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.9.1",
    "redis[async]>=6.4.0",
    "sqlalchemy>=2.0.40",
    "twilio>=9.6.1",
]
